add contact fields - optimize segments
